[Feat] install dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "<p align=\"center\">\r     <img src=\"https://raw.githubusercontent.com/caiogondim/javascript-environments-logos/master/node.js/standard/454x128.png\">\r </p>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/AlirezaEbrahimkhani/schoolManagmentSystem-nodejs-postgres/issues"
   },
-  "homepage": "https://github.com/AlirezaEbrahimkhani/schoolManagmentSystem-nodejs-postgres#readme"
+  "homepage": "https://github.com/AlirezaEbrahimkhani/schoolManagmentSystem-nodejs-postgres#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
